# rc-back

./: .env.example  .gitignore  Dockerfile  ci_requirements.txt  docker-compose.prod.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
robotechnics/robotechnics/: settings.py
robotechnics/robotechnics/urls/: api.py
rs_back/achievement/: admin.py  apps.py  forms.py  models.py  router.py  serializers.py  urls.py
rs_back/achievement/migrations/: 0001_initial.py  0002_alter_achievement_link_to_media_and_more.py  0008_alter_achievementorder_achievement_and_more.py
rs_back/achievement/tests/: test_models.py
rs_back/application/: asgi.py  settings.py  wsgi.py
rs_back/application/urls/: __init__.py  api.py
rs_back/core/: apps.py
rs_back/director/: admin.py  apps.py  forms.py  models.py  router.py  serializers.py  urls.py
rs_back/director/migrations/: 0001_initial.py
rs_back/director/tests/: test_models.py
rs_back/events/: admin.py  apps.py  forms.py  models.py  router.py  serializers.py  urls.py
rs_back/events/migrations/: 0001_initial.py  0002_rename_seacher_vk_questionnaire_searcher_vk_and_more.py
rs_back/events/tests/: test_models.py
rs_back/hardathon/: admin.py  apps.py  forms.py  models.py  router.py  serializers.py  urls.py
rs_back/hardathon/migrations/: 0001_initial.py  (+2 more)
rs_back/news/: admin.py  apps.py  forms.py  models.py  router.py  serializers.py  urls.py
rs_back/partners/: admin.py  apps.py  forms.py  models.py  router.py  serializers.py  urls.py
rs_back/static_data/: admin.py  apps.py
(+6 files in other folders)
