[tool.poetry]
name = "rs-back"
version = "0.1.0"
description = ""
authors = ["darleet <darleet@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.7.2"
attrs = "23.1.0"
django = "4.2.6"
django-cleanup = "8.0.0"
django-cors-headers = "4.1.0"
django-debug-toolbar = "4.2.0"
django-environ = "0.11.2"
django-filter = "23.3"
django-phonenumber-field = "7.2.0"
djangorestframework = "3.14.0"
drf-spectacular = "0.26.5"
drf-yasg = "1.21.7"
flake8 = "6.1.0"
inflection = "0.5.1"
jsonschema = "4.19.1"
jsonschema-specifications = "2023.7.1"
mccabe = "0.7.0"
packaging = "24.1"
phonenumbers = "8.13.23"
pillow = "10.1.0"
pycodestyle = "2.11.1"
pyflakes = "3.1.0"
python-dotenv = "1.0.0"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
referencing = "0.30.2"
rpds-py = "0.10.6"
setuptools = "69.0.2"
sorl-thumbnail = "12.10.0"
sqlparse = "0.4.4"
typing-extensions = "4.8.0"
uritemplate = "4.1.1"
psycopg = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "rs_back.application.settings"
